--- a/index.html
+++ b/index.html
@@ -1,84 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Pizza,pizzaria">
-    <meta name="author" content="Andre K., Andre.N">
-    <title>André's Pizza</title>
-    <link rel="shortcut icon" href="assets/img/Inserir_um_pouquinho_de_texto__1_-removebg-preview.png"
-        type="image/x-icon">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <title>Agropecuária</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #B0E0E6;
+        }
+        header {
+            background-color: #808080;
+            color: rgb(0, 0, 0);
+            padding: 20px 0;
+            text-align: center;
+        }
+        nav {
+            background-color: #5cb85c;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
+            
+        }
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+        }
+        .gallery img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        footer {
+            background-color:  #808080;
+            color: rgb(0, 0, 0);
+            text-align: center;
+            padding: 20px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
 </head>
-
 <body>
-    <div id="nav">
-        <div class="container clearfix">
-            <img class="left" src="assets/img/frango_com_catupiry.png" alt="Logo da pizzaria" width="50">
-            <ul id="menu">
-                <li><a href="#pizzas">Pizza</a></li>
-                <li><a href="#bebidas">Bebidas</a></li>
-            </ul>
-            <ul class="right">
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-            </ul>
+    <header>
+        <h1>Agropecuária</h1>
+    </header>
+    <div class="container">
+        <h2>Agropecuária</h2>
+        <div class="gallery">
+            <img src="ft/WhatsApp Image 2024-03-20 at 09.51.24.jpeg" alt=>
+            <img src="ft/WhatsApp Image 2024-03-20 at 09.53.32.jpeg" alt=>
+            <img src="ft/WhatsApp Image 2024-03-20 at 10.01.17.jpeg" alt=>
         </div>
+        <h2>A Importância da Agropecuária na Sociedade</h2>
+        <p>Fornecimento de Alimentos e Matérias-Primas: A agropecuária é responsável por fornecer alimentos essenciais para a população global, além de matérias-primas para diversas indústrias, como o setor têxtil e de energia. </p>
+        <p>Sustentação de Comunidades Rurais: A atividade agropecuária sustenta comunidades rurais ao redor do mundo, proporcionando empregos e promovendo o desenvolvimento econômico e social dessas regiões.</p>
+        <p>Desafios Ambientais e Climáticos: Enfrenta desafios significativos, como as mudanças climáticas e a pressão por recursos naturais, que ameaçam a sustentabilidade do setor e a segurança alimentar global.</p>
+        <p><b>Para mais informações clique aqui</b><a href="#"> https://videira.ifc.edu.br/tecnico-agropecuaria/</a></p>
     </div>
-    <div id="main">
-        <section id="inicio">
-            <div class="amarelo">
-                <div class="container clearfix">
-                    <h1 id="nome">André's Pizza</h1>
-                    <h1>Promoções</h1>
-                    <br>
-                    <img class="col-3" src="assets/img/SEGUNDA.png" alt="" hspace="5">
-                    <img class="col-3" src="assets/img/Quinta em Dobro.png" alt="" hspace="5">
-                    <img class="col-3" src="assets/img/Sábado Supremo (1).png" alt="" hspace="5">
-                    <hr>
-                </div>
-            </div>
-        </section>
-        <div id="pizzas">
-            <div class="blue">
-                <div class="container clearfix">
-                    <h1 id="meio">Pizzas</h1>
-                    <div class="col-4">
-                        <h2 class="right">Alho e Óleo</h2>
-                    </div>
-                    <div class="col-6">
-                        <img class="left" src="assets/img/S69.jpg" alt="">
-                        <ul class="right">
-                            <li>Mussarela</li>
-                            <li>Molho de Tomate</li>
-                            <li>Alho</li>
-                            <li>Óleo</li>
-                        </ul>
-                    </div>
-                </div>
-                <section id="Cardápio">
-                    <div class="container clearfix">
-                        <hr>
-                        <div class="col-4">
-                            <h2 class="right">Frango e Catupiry</h2>
-                        </div>
-                        <div class="col-6">
-                            <img class="left" src="assets/img/S92.jpg" alt="">
-                            <ul class="right">
-                                <li>Mussarela</li>
-                                <li>Molho de Tomate</li>
-                                <li>Frango</li>
-                                <li>Catupiry</li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>
-    </div>
-    </div>
+    <footer>
+        <p>&copy; Agro23 - Maria Isadora.</p>
+    </footer>
 </body>
-
 </html>
