--- a/index.html
+++ b/index.html
@@ -1,78 +1,73 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agropecuária</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #B0E0E6;
-        }
-        header {
-            background-color: #808080;
-            color: rgb(0, 0, 0);
-            padding: 20px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #5cb85c;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 0 20px;
-            
-        }
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-        }
-        .gallery img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        footer {
-            background-color:  #808080;
-            color: rgb(0, 0, 0);
-            text-align: center;
-            padding: 20px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curso Técnico em Agropecuária - IFC Videira</title>
+  <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <header>
-        <h1>Agropecuária</h1>
-    </header>
-    <div class="container">
-        <h2>Agropecuária</h2>
-        <div class="gallery">
-            <img src="ft/WhatsApp Image 2024-03-20 at 09.51.24.jpeg" alt=>
-            <img src="ft/WhatsApp Image 2024-03-20 at 09.53.32.jpeg" alt=>
-            <img src="ft/WhatsApp Image 2024-03-20 at 10.01.17.jpeg" alt=>
-        </div>
-        <h2>A Importância da Agropecuária na Sociedade</h2>
-        <p>Fornecimento de Alimentos e Matérias-Primas: A agropecuária é responsável por fornecer alimentos essenciais para a população global, além de matérias-primas para diversas indústrias, como o setor têxtil e de energia. </p>
-        <p>Sustentação de Comunidades Rurais: A atividade agropecuária sustenta comunidades rurais ao redor do mundo, proporcionando empregos e promovendo o desenvolvimento econômico e social dessas regiões.</p>
-        <p>Desafios Ambientais e Climáticos: Enfrenta desafios significativos, como as mudanças climáticas e a pressão por recursos naturais, que ameaçam a sustentabilidade do setor e a segurança alimentar global.</p>
-        <p><b>Para mais informações clique aqui</b><a href="#"> https://videira.ifc.edu.br/tecnico-agropecuaria/</a></p>
-    </div>
-    <footer>
-        <p>&copy; Agro23 - Maria Isadora.</p>
-    </footer>
+  <header>
+    <h1>Curso Técnico em Agropecuária</h1>
+    <nav>
+      <ul>
+        <li><a href="#sobreIFC.html">Sobre</a></li>
+        <li><a href="#grade">Informações</a></li>
+        <li><a href="#inscricoes">Inscrições</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+ <body class="container">
+
+    <section class="">
+        <img src="src/img/fullbanner-AGRO1-1349x200-1.jpg">
+    </section>
+
+  <section id="sobre" class="sobre">
+    <h2 class="titulo">Curso Técnico em Agropecuária</h2>
+    <p>O Curso Técnico de Agropecuária Integrado ao Ensino Médio do Instituto Federal Catarinense (IFC) tem como objetivo promover a formação de Técnico em Agropecuária dentro de uma perspectiva empreendedora, inserida na realidade social, cultural e ambiental, visando o desenvolvimento do indivíduo como cidadão capaz de atuar no campo profissional de forma tecnicamente correta, economicamente rentável e ambientalmente sustentável.
+                        A proposta do curso é a de que o egresso em Agropecuária do IFC seja um profissional com competências nas áreas de produção animal, produção vegetal, solos, infraestrutura rural e gestão, capaz de atuar em todas as etapas do setor agrário, desde o planejamento, execução de projetos, obtenção de produtos, industrialização e comercialização.</p>
+    <br>
+    <h2 class="titulo">Possibilidades de atuação</h2>
+    <p>Empresas e propriedades rurais nas áreas de administração, produção, comercialização e prestação de serviços; Empresas de produção de sementes e mudas; empresas comerciais de insumos, máquinas e equipamentos agropecuários; estabelecimentos agroindustriais; empresas de assistência técnica, extensão rural e pesquisa; parques e reservas naturais; Cooperativas de produção; sindicatos e produtores rurais; órgãos públicos e privados.</p>
+
+  </section>
+
+  <section id="grade">
+    <h2 class="titulo">Informações Gerais</h2>
+    <h4>Curso Técnico em Agropecuária Integrado ao Ensino Médio</h4>
+    <ul>
+      <li><b>Modalidade:</b> presencial</li>
+      <li><b>Duração:</b> 3 anos</li>
+      <li><b>Turno de oferta:</b> integral – Matutino e Vespertino</li>
+      <li><b>Vagas:</b> 35  por ano</li>
+      <li><b>Forma de ingresso:</b> Processo seletivo</li>
+      <li><b>Titulação:</b> Técnico em Agropecuária</li>
+      <li><b>Carga horária:</b> 3730 horas</li>
+      <li><b>Carga horária do estágio supervisionado:</b> 120 horas</li>
+      <li><b>Carga horária das atividades diversificadas:</b> 220 horas</li>
+      <li><b>Pré-requisito:</b> Ensino Fundamental completo</li>
+    </ul>
+  </section>
+
+  <section id="inscricoes" class="">
+    <h2 class="titulo">Inscrições</h2>
+    <p class="sobre">As inscrições do processo seletivo para os Cursos Técnicos Integrados ao Ensino Médio do IFC têm início nesta segunda-feira (18), e vão até o dia 19 de setembro. O procedimento é feito exclusivamente pela internet, no Portal do Candidato do IFC </p>
+    <br>
+    <p class="sobre">A seleção vai disponibilizar 2455 vagas em 17 cursos, com ingresso no primeiro semestre de 2026, distribuídos entre os 15 campi do IFC: Abelardo Luz,  Araquari, Blumenau, Brusque, Camboriú, Concórdia, Fraiburgo, Ibirama, Luzerna, Rio do Sul, Santa Rosa do Sul, Sombrio, São Bento do Sul, São Francisco do Sul e Videira.  </p>
+    <br>
+    <p class="sobre">No Campus Videira são oferecidas 175 vagas nos cursos técnicos de Agropecuária (35), Eletroeletrônica (70) e Informática (70).</p>
+    <br>
+    <p class="sobre">Todos os cursos são completamente gratuitos, sem taxa de matrícula, mensalidade ou cobrança por material.</p>
+    <br>
+    <a class="btn" href="https://candidato.ifc.edu.br/">Acessar Edital</a>
+  </section>
+
+  <footer>
+    <p>&copy; Feito por André Nascimento</p>
+  </footer>
+
 </body>
 </html>
