--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Curso Técnico em Agropecuária</h1>
     <nav>
       <ul>
-        <li><a href="#sobreIFC.html">Sobre</a></li>
+        <li><a href="sobreIFC.html">Sobre</a></li>
         <li><a href="#grade">Informações</a></li>
         <li><a href="#inscricoes">Inscrições</a></li>
         <li><a href="contato.html">Contato</a></li>
@@ -67,6 +67,7 @@
 
   <footer>
     <p>&copy; Feito por André Nascimento</p>
+    <p>IFC – Campus Videira, Videira/SC | Telefone: (49) 3533-4931</p>
   </footer>
 
 </body>
