--- a/contato.html
+++ b/contato.html
@@ -11,9 +11,7 @@
   <header>
     <h1>Curso Técnico em Agropecuária</h1>
     <nav>
-      <ul>
-        <li><a href="index.html">Voltar para Home</a></li>
-      </ul>
+      <a href="index.html">Voltar para Home</a>
     </nav>
   </header>
 
